--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Listing Restaurants</h1>
+<div class="jumbotron">
+<h2>petit test bootstrap</h2>
+<h3>trouver le mailleur restaurant au monde c'est ici que sa se passe</h3>
+</div>
 
 <table class="table table-hover">
   <thead>
