--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,6 @@
-<p id="notice"><%= notice %></p>
 <div class="jumbotron">
 <h2>petit test bootstrap</h2>
-<h3>trouver le mailleur restaurant au monde c'est ici que sa se passe</h3>
+<h3>trouver le meilleur restaurant au monde c'est ici que ça se passe</h3>
 </div>
 
 <table class="table table-hover">
